Entities updated